src/widgets/player/whimsical-game/components/ChoiceContent/styles.module.css
.choice {
  position: relative;
  width: 100%;
  border-radius: 4px;
  border: 0;
  outline: none;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #fcf3e3;
  padding: 0;
}

.button {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
  background-color: var(--whimsical-frame-bg-color);
  color: black;

  & img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

.expandButton {
  position: absolute;
  top: 10px;
  right: 10px;
}

